apps/flask-login-app/manifest/flask-login-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-login
  namespace: flask-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-login
  template:
    metadata:
      labels:
        app: flask-login
    spec:
      containers:
      - name: flask-login
        image: flask-login-app:1.0  # (your built image; push to registry if needed)
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
