apps/flask-login-app/manifest/flask-login-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-login-svc
  namespace: flask-web
spec:
  selector:
    app: flask-login
  ports:
  - port: 80
    targetPort: 5000
